# pydicts

./: .buildinfo  .gitignore  NEW_RELEASE.md  README.md  casts.html  casts.json  changelog.html  colors.html  colors.json  config.json  currency.html  currency.json  dod.html  dod.json  genindex.html  index.html  index.json  intro.html  lod-xyv.json  lod-ymv.json  lod.html  lod.json  lod_xyv.html  lod_ymv.html  lol.html  lol.json  myjsonencoder.html  myjsonencoder.json  myst.search.json  myst.xref.json  objects.inv  percentage.html  percentage.json  pydicts.epj  pylatex.html  pylatex.json  pyproject.toml  requirements.txt  search.html  searchindex.js  (+1 more)
.github/workflows/: jupyter-book-publish.yml  python-app.yml
_sources/: casts.md  changelog.md  currency.md  dod.md  lod.md  lod_xyv.md  myjsonencoder.md  percentage.md
casts/: index.html
colors/: index.html
currency/: index.html
docs/: .buildinfo  LOD.md  LOD_XYV.md  LOD_YMV.md  LOL.md  casts.html  currency.html  genindex.html  intro.html  lod.html  lod_xyv.html  lod_ymv.html  lol.html  markdown-notebooks.html  markdown.html  myjsonencoder.html  notebooks.html  objects.inv  percentage.html  pylatex.html  search.html  searchindex.js
docs/_sources/: casts.md  currency.md  intro.md  lod.md  lod_ymv.md  lol.md  myjsonencoder.md  percentage.md  pylatex.md
dod/: index.html
jupyter/: _config.yml  _toc.yml  casts.md  changelog.md  dod.md  intro.md  lod.md  lod_xyv.md  lod_ymv.md  lol.md  myst.yml
jupyter/_build/html/: genindex.html  intro.html  lod.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
jupyter/_build/html/_sources/: lod.md
lod/: index.html
lod-xyv/: index.html
lod-ymv/: index.html
lol/: index.html
myjsonencoder/: index.html
percentage/: index.html
pydicts/: __init__.py  casts.py  classes.py  colors.py  currencies.json  currency.py  devscripts.py  dod.py  exceptions.py  lod.py  lod_xyv.py  lod_ymv.py  lol.py  myjsonencoder.py  percentage.py  poethepoet.py  pylatex.py  row_column_value.py  year_month_value.py
pydicts/locale/: es.po  pydicts.pot
pydicts/locale/es/LC_MESSAGES/: pydicts.mo
pydicts/tests/: conftest.py  lod.py  test_casts.py  test_colors.py  test_currency.py  test_dod.py  test_lod.py  test_lod_ymv.py  test_lol.py  test_myjsonencoder.py  test_percentage.py  test_pylatex.py  test_year_month_value.py
pylatex/: index.html
