[tool.poetry]
name = "pydicts"
version = "0.16.0"
description = "Module to use dictionaries in various situations"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
tabulate = "^0.9.0"
pylatex = "^1.4.2"
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
poethepoet = "^0.25.0"
coverage = "^7.4.4"
jupyter-book = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "pydicts.poethepoet:release" }
translate = { script = "pydicts.poethepoet:translate" }
test   = "pytest" 
coverage = { script = "pydicts.poethepoet:coverage" }
jupyter = { script = "pydicts.poethepoet:jupyter" }
currencies = { script = "pydicts.poethepoet:currencies" }


[project.urls] 
homepage = "https://github.com/turulomio/pydicts/"
repository = "https://github.com/turulomio/pydicts/"
changelog = "https://github.com/turulomio/pydicts#changelog"
