[project]
name = "pydicts"
version = "1.1.0"
description = "Module to use dictionaries in various situations"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "tabulate >=0.9.0",
    "isodate >=0.7.2",
    "colorama >=0.4.6"
]


[project.optional-dependencies]
latex = [  "pylatex >=1.4.2,<2.0.0" ]


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
poethepoet = ">=0.34.0"
coverage = ">=7.8.2"
jupyter-book = ">=1.0.4.post1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "pydicts.poethepoet:release" }
translate = { script = "pydicts.poethepoet:translate" }
test   = "pytest" 
coverage = { script = "pydicts.poethepoet:coverage" }
jupyter = { script = "pydicts.poethepoet:jupyter" }
currencies = { script = "pydicts.poethepoet:currencies" }

[project.urls] 
homepage = "https://github.com/turulomio/pydicts/"
repository = "https://github.com/turulomio/pydicts/"
changelog = "https://github.com/turulomio/pydicts#changelog"
